modified:   css/responsive.css 	modified:   css/style.css 	modified:   index.html 	modified:   js/script.js

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -74,6 +74,14 @@
     margin: 15px 0;
   }
 
+  .going {
+    font-size: 25px;
+  }
+
+  .exit {
+    width: 85%;
+  }
+
   .exit img {
     width: 40px;
   }
