--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,6 @@ body {
   bottom: 0;
   align-items: center;
   justify-content: center;
-  transform: scale(0);
-  transition: all 1s ease-in-out;
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100vh;
@@ -43,9 +41,12 @@ body {
 .exit {
   position: absolute;
   top: 1;
-  text-align: right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 95%;
   z-index: 20;
+  padding: 0 9px;
 }
 
 .exit img {
@@ -74,8 +75,6 @@ body {
   bottom: 0;
   align-items: center;
   justify-content: center;
-  transform: scale(0);
-  transition: all 1s ease-in-out;
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100vh;
@@ -432,16 +431,53 @@ h2 {
   font-size: 500;
 }
 
-.card-fitur {
+.card-slide {
   width: 100%;
   height: 100%;
 }
 
-.card-fitur img {
+.card-slide img {
   width: 100%;
   height: 100%;
 }
 
+.card-slide h5 {
+  color: #fff;
+  font-size: 36px;
+  font-weight: 600;
+}
+
+.card-slide span {
+  color: #fff;
+  font-size: 14px;
+}
+
+.card-slide h6 {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.card-slide button {
+  background-color: var(--pr-color);
+  color: #fff;
+  border: none;
+  width: 150px;
+  height: 45px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.card-slide .overlay {
+  background-color: rgba(0, 0, 0, 0);
+  opacity: 0;
+  transition: all ease-in-out 1s;
+}
+
+.card-slide .overlay:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 1;
+}
 .card-fitur h5 {
   color: #fff;
   font-size: 36px;
