--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
   color: #007245;
   padding: 20px;
   width: 70%;
-  height: 300px;
+  height: 70%;
   border-radius: 30px;
   background-color: #ffffff;
 }
@@ -432,7 +432,7 @@ h2 {
 }
 
 .card-slide {
-  width: 100%;
+  width: 50%;
   height: 100%;
 }
 
